# embedded-ml-analyzer

./: LICENSE  README.md  pyproject.toml
examples/: feasibility_demo.py
src/embedml/: cli.py  hardware_profiles.py  model_analyzer.py  report.py  utils.py
